# archetypal-narrative-mcp

./: README.md  pyproject.toml
src/archetypal_narrative_mcp/: __init__.py  server.py
