[project]
name = "archetypal-narrative-mcp"
version = "1.0.0"
description = "MCP server for archetypal narrative structure generation using Jung/Campbell affective trajectories"
authors = [
    {name = "Dal Marsters", email = "dal@lushy.app"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "mcp",
    "narrative",
    "archetypal",
    "jung",
    "campbell",
    "affective-computing",
    "visual-storytelling",
    "cohomology",
    "category-theory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics"
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# Experimental validation tools
experimental = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0"
]

# Integration with other Lushy servers
integration = [
    "httpx>=0.24.0",  # For calling other MCP servers
]

# Full development environment
dev = [
    "archetypal-narrative-mcp[experimental,integration]",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]

[project.scripts]
archetypal-narrative-mcp = "archetypal_narrative_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archetypal_narrative_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/archetypal_narrative_mcp",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml"
]

# Black code formatting
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff linting
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# MyPy type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "experimental: marks tests for experimental validation features"
]

# Coverage configuration
[tool.coverage.run]
source = ["archetypal_narrative_mcp"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# FastMCP-specific configuration
[tool.fastmcp]
# Server configuration for FastMCP deployment
name = "archetypal-narrative"
description = "Archetypal narrative structure generation using Jung/Campbell affective trajectories"
version = "1.0.0"

# Cost optimization metadata
[tool.fastmcp.cost]
# Layer 1 (taxonomy) - 0 tokens
taxonomy_tools = [
    "list_archetypal_arcs",
    "get_affective_sequence", 
    "get_affective_dimension_details"
]

# Layer 2 (deterministic mapping) - 0 tokens
deterministic_tools = [
    "encode_affective_state",
    "calculate_narrative_cohomology",
    "detect_compensatory_dynamics"
]

# Layer 3 (synthesis) - ~150 tokens per call
synthesis_tools = [
    "generate_narrative_frame_spec",
    "generate_complete_narrative_sequence"
]

# Educational/integration tools - varies
educational_tools = [
    "get_intentionality",
    "get_integration_bridges"
]

# Lushy ecosystem metadata
[tool.lushy]
category = "narrative-structure"
layer_architecture = "three-layer-olog"
cost_model = "0-0-150"  # Layer 1 - Layer 2 - Layer 3 (tokens)
integrates_with = [
    "tomographic-orchestrator",
    "norman-rockwell-mcp",
    "photographic-perspective-mcp",
    "register-code-mcp",
    "shadow-complement-integration",
    "composition-graph-mcp"
]

functors = [
    "affective_to_visual",
    "affective_to_register",
    "affective_to_camera_parameters"
]

validation = "h1-cohomology"
theoretical_foundation = "jung-campbell-archetypal-theory"

# Research experiment configuration
[tool.lushy.experiments]
condition_a = "random_affect_random_subject"
condition_b = "structured_affect_random_subject"  # Critical test
condition_c = "structured_affect_coherent_subject"  # Baseline
condition_d = "random_affect_coherent_subject"  # Control

prediction = "Condition B shows narrative coherence despite semantic randomness"
null_hypothesis = "Affective structure alone insufficient for narrative coherence"

# Package metadata for PyPI
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "archetypal_narrative_mcp/__init__.py"
