[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archetypal-narrative-mcp"
version = "1.0.0"
description = "MCP server for archetypal narrative structure generation using Jung/Campbell affective trajectories"
authors = [
    {name = "Dal Marsters", email = "dal@lushy.app"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "mcp",
    "narrative",
    "archetypal",
    "jung",
    "campbell",
    "affective-computing",
    "visual-storytelling",
    "cohomology",
    "category-theory"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[tool.setuptools]
packages = []
